# llama.cpp

./: pyproject.toml
examples/redpajama/: pyproject.toml  requirements.txt
