[project]
name = "redpajama"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Kazuhiro Homma", email = "kazu.homma@gmail.com" }
]
dependencies = ["certifi==2023.5.7", "charset-normalizer==3.1.0", "filelock==3.12.0", "fsspec==2023.5.0", "huggingface-hub==0.15.1", "idna==3.4", "jinja2==3.1.2", "markupsafe==2.1.3", "mpmath==1.3.0", "networkx==3.1", "numpy==1.24.0", "packaging==23.1", "protobuf==3.20.3", "pyyaml==6.0", "regex==2023.6.3", "requests==2.31.0", "sentencepiece==0.1.99", "sympy==1.12", "tokenizers==0.13.3", "torch==2.0.1", "tqdm==4.65.0", "transformers==4.29.2", "typing-extensions==4.6.3", "urllib3==2.0.2"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
[tool.hatch.metadata]
allow-direct-references = true
